# xx_auto

./: .clang-format  CMakeLists.txt  readme.md
install/xx_auto/debug/lib/: xx_autod.lib
install/xx_auto/include/: xx_auto.hpp
install/xx_auto/release/include/: xx_auto.hpp
install/xx_auto/release/lib/: xx_auto.lib
xx_auto/: xx_auto.cpp  xx_auto.hpp  xx_auto.rc  xx_auto_app.cpp  xx_auto_capturer.cpp  xx_auto_entry.cpp  xx_auto_exe.cpp  xx_auto_internal.hpp  xx_auto_ocr.cpp
